refactor: Remove example content from main site
Delete all example items and images from the root content/ and static/ directories. These assets have been moved to themes/selloff-theme/exampleSite.

Update hugo.yaml and the main _index.md to provide a clean, starter-template experience. This completes the separation of the theme's example from the main project.

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,15 +15,16 @@ params:
   
   # Contact information for potential buyers
   # NOTE: If contact section is not configured, the contact box will not appear on item pages
-  contact:
-    email: 'seller@example.com'
-    whatsapp: '+1234567890'          # Include country code
-    telegram: '@yourusername'        # Username with @
-    instagram: '@yourusername'       # Username with @
-    x: '@yourusername'              # X (Twitter) username with @
-    carousell: 'yourusername'       # Carousell username
-    facebook: 'your.profile'        # Facebook profile/page name
-    phone: '+1 (234) 567-8900'     # Formatted phone number
+  # Uncomment and configure the contact methods you want to use:
+  # contact:
+  #   email: 'seller@example.com'
+  #   whatsapp: '+1234567890'          # Include country code
+  #   telegram: '@yourusername'        # Username with @
+  #   instagram: '@yourusername'       # Username with @
+  #   x: '@yourusername'              # X (Twitter) username with @
+  #   carousell: 'yourusername'       # Carousell username
+  #   facebook: 'your.profile'        # Facebook profile/page name
+  #   phone: '+1 (234) 567-8900'     # Formatted phone number
 
 taxonomies:
   category: 'categories'
